# avsuite

./: .gitignore  .gitmodules  ARCHITECTURE.md  AvSuite.bat  CMakeLists.txt  CMakePresets.json  CODE-WALKTHROUGH.md  CODESIGNING.md  COMPLIANCE-CHECKLIST.md  DISCLAIMER.md  GETTING_STARTED.md  INCIDENT-RESPONSE.md  INSTALLATION.md  LICENSE  MITRE-MAPPING.md  PORTFOLIO.md  README.md  REAL-WORLD-SIMULATIONS.md  RELEASE_v1.0.6.md  REVERSE-ENGINEERING-GUIDE.md  STATUS.md  TEST-RESULTS-ADVANCED-EVASION.md  TEST-RESULTS-COMPREHENSIVE.md  TEST-RESULTS.md  THREAT-MODEL.md  VMWARE_TEST_CHECKLIST.md  deploy-to-vm.ps1  generate-cert.ps1  install-cert.ps1  installer.iss  package.ps1  register-amsi.ps1  run-advanced-evasion-tests.ps1  run-portfolio-tests.ps1  sign-driver.ps1  test-corpus.ps1  test-results.txt  vcpkg.json
.github/workflows/: ci-cd.yml  release.yml
deployment/: ansible-deploy.yml
docs/: web-guard-threat-research.md
driver/AvMiniFilter/: AvMiniFilter.c  AvMiniFilter.h  AvMiniFilter.inf  AvMiniFilter.vcxproj
scripts/: Harden-Fingerprint.ps1  Harden-Telemetry.ps1  Harden-WebGuard.ps1  Install-AvSuite-Portable.ps1
setup/: BUILD_INSTALLER.md  Install-AvSuite-v1.0.6.bat  README.md  TeoAvSuite.iss  avsuite.default.json  build-installer.ps1  setup.bat
src/ai_assistant/: CMakeLists.txt
src/ai_assistant/include/avai/: llm_assistant.hpp
src/ai_assistant/src/: llm_assistant.cpp
src/amsi_provider/: CMakeLists.txt
src/amsi_provider/src/: amsi_provider.cpp  amsi_provider.hpp  dllmain.cpp
src/behavior_engine/: CMakeLists.txt
src/behavior_engine/include/avbehavior/: process_event.hpp  process_tree.hpp  rule.hpp  rule_base.hpp  rule_engine.hpp
src/behavior_engine/src/: process_tree.cpp  rule_engine.cpp
src/behavior_engine/src/rules/: rule_amsi_etw_bypass.cpp  rule_amsi_etw_bypass.hpp  rule_av_killer_child.cpp  rule_av_killer_child.hpp  rule_c2_beaconing.cpp  rule_c2_beaconing.hpp  rule_credential_access.cpp  rule_credential_access.hpp  rule_credential_theft.cpp  rule_credential_theft.hpp  rule_cryptominer.cpp  rule_cryptominer.hpp  rule_defense_evasion.cpp  rule_defense_evasion.hpp  rule_exfiltration.cpp  rule_exfiltration.hpp  rule_injection.cpp  rule_injection.hpp  rule_keylogger.cpp  rule_keylogger.hpp  rule_lateral_movement.cpp  rule_lateral_movement.hpp  rule_lolbin_susp_args.cpp  rule_lolbin_susp_args.hpp  rule_macro_malware.cpp  rule_macro_malware.hpp  rule_malware_behaviors.cpp  rule_malware_behaviors.hpp  rule_persistence.cpp  rule_persistence.hpp  rule_persistence_registry.cpp  rule_persistence_registry.hpp  rule_powershell_obfuscation.cpp  rule_powershell_obfuscation.hpp  rule_ransomware.cpp  rule_ransomware.hpp  rule_ransomware_indicator.cpp  rule_ransomware_indicator.hpp  rule_rootkit.cpp  rule_rootkit.hpp  (+16 more)
src/core/: CMakeLists.txt
src/core/src/: base64.cpp  config.cpp  path_utils.cpp
src/dashboard_ui/: CMakeLists.txt  app.rc
src/dashboard_ui/src/: autohunt_types.hpp  av_animations.hpp  av_quit_guard.hpp  c2_threat_analyzer.cpp  c2_threat_analyzer.hpp  dns_etw_monitor.cpp  dns_etw_monitor.hpp  elevated_script.cpp  elevated_script.hpp  hunt_toolbar.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window_ai.cpp  main_window_ai_agent.cpp  main_window_alerts.cpp  main_window_autohunt.cpp  main_window_c2monitor.cpp  main_window_cicd.cpp  main_window_cryptominer.cpp  main_window_dllintel.cpp  main_window_dlp.cpp  main_window_dnsintel.cpp  main_window_fingerprint.cpp  main_window_firewall.cpp  main_window_hiddenhunt.cpp  main_window_history.cpp  main_window_hookhunt.cpp  main_window_investigation.cpp  main_window_kernelbios.cpp  main_window_lanmonitor.cpp  main_window_memhunt.cpp  main_window_netguard.cpp  main_window_network.cpp  main_window_osint.cpp  main_window_selfupdate.cpp  main_window_settings.cpp  main_window_supplychain.cpp  main_window_suricata.cpp  main_window_syswatch.cpp  (+10 more)
src/engine/: CMakeLists.txt
src/engine/include/avengine/: engine.hpp
src/engine/src/: dll_monitor.cpp  dll_monitor.hpp  engine.cpp  handle_monitor.cpp  handle_monitor.hpp  process_monitor.cpp  process_monitor.hpp  registry_monitor.cpp  registry_monitor.hpp
src/etw_consumer/: CMakeLists.txt
src/etw_consumer/include/avetw/: dns_etw_session.hpp  etw_session.hpp
src/etw_consumer/src/: dns_etw_session.cpp  etw_session.cpp
src/host_console/: CMakeLists.txt
src/host_console/src/: main.cpp
src/logging/: CMakeLists.txt
src/logging/src/: logger.cpp
src/pe_analyzer/: CMakeLists.txt
src/pe_analyzer/src/: authenticode.cpp  pe_analyzer.cpp
src/realtime_block/: CMakeLists.txt
src/realtime_block/src/: minifilter_client.cpp
src/realtime_watch/: CMakeLists.txt
src/registry_scan/: CMakeLists.txt
src/remediation/: CMakeLists.txt
src/static_scan/: CMakeLists.txt
src/static_scan/include/avstaticscan/: hash_signature.hpp  yara_engine.hpp
src/static_scan/rules/: 06_credential_harvesting.yar  11_process_hollowing.yar  12_common_malware.yar  20_infostealer.yar
src/static_scan/src/: hash_signature.cpp  yara_engine.cpp
src/storage/: CMakeLists.txt
src/tools/: fp_test_harness.cpp
src/update_server/: CMakeLists.txt
tests/: CMakeLists.txt
tests/behavior_engine_tests/: CMakeLists.txt  test_benign_corpus.cpp  test_rule_engine.cpp
tests/pe_analyzer_tests/: CMakeLists.txt  test_pe_analyzer.cpp
tests/realtime_watch_tests/: CMakeLists.txt  test_folder_watcher.cpp
tests/registry_scan_tests/: CMakeLists.txt  test_registry_scanner.cpp
tests/remediation_tests/: CMakeLists.txt  test_quarantine.cpp
tests/static_scan_tests/: CMakeLists.txt  test_hash_signature.cpp  test_yara_engine.cpp
vm_deploy/dashboard/: avsuite.db-shm  avsuite.db-wal
vm_deploy/driver/: AvMiniFilter.inf  AvMiniFilter.inf.backup_6-27  AvMiniFilter.sys  AvMiniFilter.sys.backup_6-27  AvMiniFilter.sys.bak_20260705_135839  setup_vm.bat
vm_test_package/: synthetic_suspicious.ps1
vm_test_package/driver/: AvMiniFilter.sys.bak_prefix_20260705_135839  WDKTestCert.cer  install_driver.bat  uninstall_driver.bat
vm_test_package/driver_signed/: AvMiniFilter.sys  RUN_AS_ADMIN.bat
(+41 files in other folders)
