cmake_minimum_required(VERSION 3.24)
project(AvSuite LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(MSVC)
  add_compile_options(/W4 /permissive-)
endif()

enable_testing()

add_subdirectory(src/core)
add_subdirectory(src/logging)
add_subdirectory(src/storage)
add_subdirectory(src/remediation)
add_subdirectory(src/pe_analyzer)
add_subdirectory(src/registry_scan)
add_subdirectory(src/static_scan)
add_subdirectory(src/behavior_engine)
add_subdirectory(src/realtime_watch)
add_subdirectory(src/realtime_block)
add_subdirectory(src/etw_consumer)
add_subdirectory(src/engine)
add_subdirectory(src/ai_assistant)
add_subdirectory(src/amsi_provider)
add_subdirectory(src/host_console)
add_subdirectory(src/dashboard_ui)
add_subdirectory(src/update_server)
add_subdirectory(tests)
